# campaign-data-processing

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci_cd_pipeline.yml
infrastructure/: main.tf  outputs.tf  variables.tf
src/: config.py  main.py
tests/: test_main.py
