[tool.poetry]
name = "campaign-data-processing"
version = "0.1.0"
description = "Campaign Data Processing with PySpark"
authors = ["Christopher Dambamuromo <chridam@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.5.1"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
